# baldur-python

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-oss.yml  ci-oss-mirror.yml  codeql.yml  docs.yml  quickstart.yml  scorecard.yml
docs/: compatibility.md  index.md  pricing.md  privacy.md  support.md  terms.md  troubleshooting.md
docs/concepts/: oss-vs-pro.md
docs/getting-started/: ai-assistants.md  django.md  fastapi.md  flask.md  index.md
docs/reference/: api-admin.md  decorators.md  env-vars.md  exceptions.md  index.md
docs/runbooks/: README.md  api-discoverability.md  audit-trail-activation.md  data-consistency-boundaries.md  dlq-two-layer-activation.md  gunicorn-graceful-shutdown.md  meta-watchdog-escalation-response.md  multi-worker-coherence.md  observability-stack-setup.md  protect-hang-troubleshooting.md  secure-deployment.md  slack-alert-action-buttons.md
examples/docker/: Dockerfile  docker-compose.yml  generate-demo-traffic.sh
examples/monitoring/: baldur-operations.json  baldur-overview.json  otel-collector.cat33.yml  otel-collector.yml  prometheus-adapter.yaml  prometheus-alerts.yml
examples/quickstart_django/: manage.py  settings.py  test_smoke.py  urls.py  views.py
examples/quickstart_fastapi/: app.py  test_smoke.py
examples/quickstart_flask/: app.py  test_smoke.py
scripts/: analyze_dependencies.py  analyze_test_imports.py  benchmark_storage.py  check_leak_guard.py  check_mypy_baseline.py  check_wiring_baseline.py  classify_pro_importing_tests.py  find_assertion_free_tests.py  generate_notices.py  migrate_baldur_env_vars.py  scan_toggle_compliance.py  verify_oss_wheel.py  wiring_allowlist.yaml
src/baldur/: __init__.py  bootstrap.py  config_tracker.py  protect_facade.py  runtime.py  server.py  slo.py
tests/: __init__.py  conftest.py
tests/architecture/: __init__.py  _helpers.py  _promql.py  baseline.yaml  conftest.py  test_ai_discovery_surface_drift.py  test_all_declaration.py  test_assurance_claim_guard.py  test_catalog_tier_drift.py  test_classify_pro_importing_tests.py  test_complexity_noqa_budget.py  test_conftest_helpers.py  test_console_panel_coverage.py  test_direct_read_env_registry.py  test_domain_set_direct_call.py  test_env_factory_bodies.py  test_env_prefix_naming.py  test_env_vars_allowlist_resolves.py  test_event_handler_no_private_metric_access.py  test_first_party_import_targets.py  test_flag_consumer_reachability.py  test_framework_heuristics.py  test_framework_independence.py  test_grafana_dashboard_metric_drift.py  test_health_check_naming.py  test_import_cycles.py  test_metric_namespace_coherence.py  test_metrics_backend_recorder_parity.py  test_mkdocs_concept_prose_leak.py  test_mkdocs_internal_doc_id_leak.py  test_no_false_dormant.py  test_no_print.py  test_optional_imports.py  test_oss_public_reference_no_korean.py  test_oss_reference_surface_complete.py  test_oss_tests_pro_classification.py  test_oss_tests_pro_marker.py  test_oss_tests_pro_private_imports.py  test_oss_tests_pro_runtime_refs.py  test_package_status_marker.py  (+12 more)
tests/benchmarks/: __init__.py  conftest.py  test_cb_reject_overhead.py  test_dlq_outbox_producer_overhead.py  test_eventbus_emit_throughput.py  test_failure_path_overhead.py  test_lock_contention_scaling.py  test_pipeline_preset_overhead.py  test_replay_throughput.py  test_success_path_overhead.py
tests/chaos/: conftest.py  test_crash_recovery.py  test_redis_failure.py
tests/e2e/: __init__.py
tests/factories/: __init__.py  builders.py  concurrency_helpers.py  constants.py  data_factory.py  execution_mode_helpers.py  integration.py  paths.py  redis.py  repositories.py  test_factories.py  time_helpers.py
tests/integration/: conftest.py  test_368_settings_decoupling.py  test_399_metrics_observability.py  test_api_rate_limit_integration.py  test_archive_repository_integration.py  test_auto_tuning_governance_eventbus.py  test_autonomous_tasks.py  test_cascading_timeout.py  test_celery_setup_logging_signal.py  test_channel_routing_pipeline_410.py  test_chaos_event_pipeline.py  test_constraint_pipeline.py  test_cross_process_zombie_lifecycle.py  test_daemon_worker_e2e.py  test_daily_report_428_flow.py  test_dlq_compression_workflow.py  test_dlq_find_count_index_lifecycle.py  test_dlq_outbox_lifecycle.py  test_event_bus_dispatch_shutdown.py  test_handler_api_view_pipeline.py  test_hybrid_storage_integration.py  test_init_fail_loud.py  test_middleware_429_cascade.py  test_postmortem_store_repo.py  test_pro_registration_flow.py  test_pro_startup_registration_flow.py  test_protect_composition_429.py  test_protect_dlq_e2e.py  test_protect_idempotency_integration.py  test_protect_timeout.py  test_recommendation_pipeline.py  test_regional_emergency_sync.py  test_resilience_composition.py  test_safety_event_handler_pipeline.py  test_signal_lifecycle.py  test_store_service_integration.py  test_zombie_experiment_gc_385.py
tests/testapp/: __init__.py  factories.py  models.py  settings.py  tasks.py  urls.py  views.py
tests/unit/: __init__.py  test_397_structural_fixes.py  test_api_view_settings_postmortem.py  test_baldur_policy.py  test_bootstrap.py  test_bootstrap_admin_autostart.py  test_bootstrap_background_services.py  test_bootstrap_bridge_instrumentation.py  test_bootstrap_error_budget_wiring.py  test_bootstrap_fork_restart.py  test_bootstrap_gunicorn_hooks_warning.py  test_bootstrap_idempotency_cache_validation.py  test_bootstrap_idempotency_gate_install.py  test_bootstrap_meta_watchdog.py  test_bootstrap_otel_instrumentation.py  test_bootstrap_precomputed_cache.py  test_bootstrap_reset_and_init_warning.py  test_bootstrap_reset_init_state.py  test_bootstrap_scheduler.py  test_bootstrap_secret_gate.py  test_bootstrap_system_metrics_cache.py  test_bootstrap_tier_warning.py  test_bootstrap_tracker_initialization.py  test_bootstrap_unknown_env_var_warning.py  test_bootstrap_wire_helpers.py  test_leak_guard.py  (+22 more)
(+2425 files in other folders)
